<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_sunset"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/credential_container_margin_top"
        android:background="@drawable/login_credentials_background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edit_text_horizontal_margins"
            android:layout_marginTop="@dimen/email_edit_text_margin_top"
            android:layout_marginRight="@dimen/login_edit_text_horizontal_margins"
            android:layout_marginBottom="@dimen/email_edit_text_margin_bottom"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/input_field_text_color"
            android:textColorHint="@color/hint_field_text_color"
            android:textSize="@dimen/input_field_text_size" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edit_text_horizontal_margins"
            android:layout_marginRight="@dimen/login_edit_text_horizontal_margins"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/input_field_text_color"
            android:textColorHint="@color/hint_field_text_color"
            android:textSize="@dimen/input_field_text_size" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_bubble_height"
            android:layout_marginStart="@dimen/login_button_margin_left"
            android:layout_marginTop="@dimen/login_button_vertical_margins"
            android:layout_marginEnd="@dimen/login_button_margin_right"
            android:layout_marginBottom="@dimen/login_button_vertical_margins"
            android:background="@color/button_blue"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</RelativeLayout>