<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gpc_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bubble_height"
        android:layout_marginLeft="@dimen/main_activity_left_right_bubble_spacing"
        android:layout_marginRight="@dimen/main_activity_left_right_bubble_spacing"
        android:layout_marginBottom="@dimen/main_bubble_bottom_margin"
        android:background="@drawable/main_rectangle_back_ground"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onChatClicked"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/chatIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_vectorImage_Spacing"
            android:src="@drawable/ic_chat" />

        <TextView
            android:id="@+id/chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_activity_textView_Spacing"
            android:text="@string/chat_button"
            android:textColor="@color/chat_text"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bubble_height"
        android:layout_marginLeft="@dimen/main_activity_left_right_bubble_spacing"
        android:layout_marginRight="@dimen/main_activity_left_right_bubble_spacing"
        android:layout_marginBottom="@dimen/main_bubble_bottom_margin"
        android:background="@drawable/main_rectangle_back_ground"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="onLoginClicked"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_vectorImage_Spacing"
            android:src="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_activity_textView_Spacing"
            android:text="@string/login_button"
            android:textColor="@color/chat_text"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bubble_height"
        android:layout_marginLeft="@dimen/main_activity_left_right_bubble_spacing"
        android:layout_marginRight="@dimen/main_activity_left_right_bubble_spacing"
        android:background="@drawable/main_rectangle_back_ground"
        android:foreground="?android:attr/selectableItemBackground"
        android:onClick="onAnimationClicked"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_vectorImage_Spacing"
            android:src="@drawable/ic_animation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_activity_textView_Spacing"
            android:text="@string/animation_button"
            android:textColor="@color/chat_text"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</LinearLayout>


